syntax = "proto3";

import "google/protobuf/empty.proto";
import "validate/validate.proto";

package xm.api.company.v1;

option go_package = "xm/company/internal/pkg/api/company/v1;company";

service CompanyService {
    rpc Get(GetCompanyRequest) returns (GetCompanyResponse) { }
}

message GetCompanyRequest {
    string company_id = 1 [(validate.rules).string = {uuid: true}];
}

message GetCompanyResponse {
    Company company = 1;
}

message Company {
    string id = 1 [(validate.rules).string = {uuid: true}];
    string name = 2;
    string description = 3;
    int32 amount_of_employees = 4;
    bool registered = 5;
    CompanyType type = 6;
}

enum CompanyType {
    Corporations = 0;
	NonProfit = 1;
	Cooperative = 2;
	SoleProprietorship = 3;
}
